objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Fiscal_Quarter__c</fullName>
        <formula>CASE(MONTH(  CloseDate ), 2, &quot;Q1&quot; , 3, &quot;Q1&quot;, 4, &quot;Q1&quot;, 5, &quot;Q2&quot;, 6, &quot;Q2&quot;, 7, &quot;Q2&quot;, 8, &quot;Q3&quot;, 9, &quot;Q3&quot;, 10, &quot;Q3&quot;, 11, &quot;Q4&quot;, 12, &quot;Q4&quot;, 1, &quot;Q4&quot;, &quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecasted_Revenue_Growth__c</fullName>
        <description>Forecasted Revenue Growth used for renewal opportunities to track forecasted revenue growth</description>
        <formula>((ACV__c-SRB__c)/SRB__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Use this field to track the forecasted review growth for renewal opportunities</inlineHelpText>
        <label>Forecasted Revenue Growth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GCLID__c</fullName>
        <description>Google Tracking ID</description>
        <label>GCLID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date__c</fullName>
        <label>Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gong__CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gong__Gong_Count__c</fullName>
        <description>Auto computed field that is used in reports for aggregations.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto computed field that is used in reports for aggregations.</inlineHelpText>
        <label>Gong Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gong__MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Grant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Implementation_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the partner that will be performing the implementation. Please choose Copado if we are doing the implementation and leave blank if no implementation.</inlineHelpText>
        <label>Implementation Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Implementation Partner)</relationshipLabel>
        <relationshipName>ImplementationPartnerOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation_Survey_Link__c</fullName>
        <formula>IF( 
NOT(ISBLANK(Implementation_Partner__c )), 
HYPERLINK(&quot;https://www.getfeedback.com/r/kjobuFSw?Opportunity_ID=&quot;&amp;Id&amp;&quot;&amp;Opportunity_Account_ID=&quot;&amp;AccountId,&quot;Click Here&quot;),
HYPERLINK(&quot;https://www.getfeedback.com/r/3khjwWFy?Opportunity_ID=&quot;&amp;Id&amp;&quot;&amp;Opportunity_Account_ID=&quot;&amp;AccountId,&quot;Click Here&quot;))</formula>
        <label>Implementation Survey Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Survey_Status__c</fullName>
        <label>Implementation Survey Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Implementation_Survey_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>InfoSec_Status__c</fullName>
        <label>InfoSec Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress - Prospect</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <label>In Progress - Copado</label>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <isActive>false</isActive>
                    <label>N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Relationship__c</fullName>
        <description>Name of the person responsible for the key relationship.</description>
        <label>Key Relationship</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__Is_Influenced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Opportunity was influenced by activities on LinkedIn Sales Navigator</description>
        <label>Is_Influenced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Call_In__c</fullName>
        <label>Last Call In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Call_Out__c</fullName>
        <label>Last Call Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Email_Received__c</fullName>
        <label>Last Email Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Email_Sent__c</fullName>
        <label>Last Email Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_SE_Meeting__c</fullName>
        <description>Date indicates the last time an SE met with the prospect related to an opportunity. Is filled in by a process builder.</description>
        <label>Last SE Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Trial_Meeting__c</fullName>
        <description>The data for this field is pulled from the s&quot;Sub-Type&quot; field on the most recent meeting record that is of the &quot;Trial Meeting&quot; type.</description>
        <label>Latest Trial Meeting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <description>Used to give a granular look at our EBQ campaigns for each lead source and across both leads and contacts.</description>
        <label>Lead Source Detail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Data__c</fullName>
        <description>This field will be used for Distinguishing Migrated Legacy Data from acquisition</description>
        <label>Legacy Data</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Context</fullName>
                </value>
                <value>
                    <fullName>Qentinel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Status__c</fullName>
        <label>Legal Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress  - Prospect</fullName>
                    <label>In Progress - Prospect</label>
                </value>
                <value>
                    <fullName>In Progress - Copado</fullName>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <isActive>false</isActive>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <isActive>false</isActive>
                    <label>N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lost_Reason_Detail__c</fullName>
        <inlineHelpText>A more in-depth explanation why the deal was Lost.</inlineHelpText>
        <label>Lost Reason Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lost_Reason_Detail_picklist__c</fullName>
        <label>Lost Reason Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Lost_Reason__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bad fit</fullName>
                </value>
                <value>
                    <fullName>Ease of use</fullName>
                </value>
                <value>
                    <fullName>Technical Issues</fullName>
                </value>
                <value>
                    <fullName>Implementation Issues</fullName>
                </value>
                <value>
                    <fullName>M&amp;A</fullName>
                </value>
                <value>
                    <fullName>Duplicate/Replaced with another opp</fullName>
                </value>
                <value>
                    <fullName>Out of business</fullName>
                </value>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>Gearset</fullName>
                </value>
                <value>
                    <fullName>Autorabit</fullName>
                </value>
                <value>
                    <fullName>Flosum</fullName>
                </value>
                <value>
                    <fullName>Build vs. Buy</fullName>
                </value>
                <value>
                    <fullName>ClickDeploy</fullName>
                </value>
                <value>
                    <fullName>Stretch fit</fullName>
                </value>
                <value>
                    <fullName>Didn&apos;t Renew</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <label>Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Adoption</fullName>
                </value>
                <value>
                    <fullName>Authority</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>CopadoEssentials</fullName>
                    <label>Copado Essentials</label>
                </value>
                <value>
                    <fullName>Duplicate/replace by another Opp</fullName>
                </value>
                <value>
                    <fullName>Economical</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Priority</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MFJ__c</fullName>
        <inlineHelpText>Manager Forecast Judgement helps sales managers forecast. In = Commit, Out = Not in this month, Up = Best Case</inlineHelpText>
        <label>MFJ</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In</fullName>
                </value>
                <value>
                    <fullName>Out</fullName>
                </value>
                <value>
                    <fullName>Up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MRR__c</fullName>
        <label>MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MSA_Redlines_Expected_Date__c</fullName>
        <label>MSA Redlines Expected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MSA_Source__c</fullName>
        <label>MSA Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Copado paper</fullName>
                </value>
                <value>
                    <fullName>Customer paper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Main_Problems__c</fullName>
        <inlineHelpText>A brief description of current problems faced.</inlineHelpText>
        <label>Main Problems</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Major_Risks__c</fullName>
        <inlineHelpText>Why wouldn&apos;t this prospect buy from us?</inlineHelpText>
        <label>Major Risks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Manager_Notes__c</fullName>
        <label>Manager Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Marekting_Pipe__c</fullName>
        <formula>IF( ACV__c  &gt; 1, ACV__c ,  Amount )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Pipe</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mutual_Plan__c</fullName>
        <inlineHelpText>Outline agreed mutual plan with dates and steps</inlineHelpText>
        <label>Mutual Plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>My_DateTime__c</fullName>
        <label>My DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>My_Geolocation__c</fullName>
        <label>My Geolocation</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>NCS_Weighted_Opp_Value__c</fullName>
        <description>This Field is Created For New Context Data Migration</description>
        <formula>Amount  *  Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NCS Weighted Opp Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NDA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check once NDA or MNDA is executed.</description>
        <label>NDA Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Contact__c</fullName>
        <description>Provides information on when the when the next contact date is.</description>
        <label>Next Contact</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Meeting__c</fullName>
        <label>Next Meeting</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>No_of_Employees__c</fullName>
        <description>This field is not in use, please refer to the &quot;Company Size&quot; picklist field instead</description>
        <inlineHelpText>This field is not in use, please refer to the &quot;Company Size&quot; picklist field instead</inlineHelpText>
        <label>No. of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Orgs__c</fullName>
        <description>Number of orgs in the production environment.</description>
        <inlineHelpText>Number of orgs in the production environment.</inlineHelpText>
        <label>No. of Orgs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Standard_ACV__c</fullName>
        <formula>SBQQ__PrimaryQuote__r.Non_Standard_ACV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non Standard ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NumberOfEmployees__c</fullName>
        <formula>Text( Account.NumberOfEmployees )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Employees</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OA__CLOSED_ACTIVITIES__c</fullName>
        <label>Closed Activities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OA__Next_Step_Date__c</fullName>
        <label>Next Step Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OA__Next_Step__c</fullName>
        <label>Next Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OA__OPEN_ACTIVITIES__c</fullName>
        <label>Open Activities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>One_time_Product_Discount__c</fullName>
        <label>One-time Product Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>One_time_Product_Discounts__c</fullName>
        <formula>1 -  SBQQ__PrimaryQuote__r.Total_One_Time_Product_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One-time Product Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity_Creation_Role__c</fullName>
        <label>Opportunity Creation Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>BDR</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Region__c</fullName>
        <label>Opportunity Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Summit</fullName>
                </value>
                <value>
                    <fullName>Select</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Org_Id__c</fullName>
        <label>Org Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Source_Data_1__c</fullName>
        <description>This field is created as part of Qentinel data Migration</description>
        <label>Original Source Data 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Source_Data_2__c</fullName>
        <description>This field is created as part of Qentinal Data Migration</description>
        <label>Original Source Data 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Competitor__c</fullName>
        <description>If you selected Other in the Primary or Secondary Competitor please put the competitor we are facing into this field</description>
        <inlineHelpText>If you selected Other in the Primary or Secondary Competitor please put the competitor we are facing into this field</inlineHelpText>
        <label>Other Competitor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outclause_Date__c</fullName>
        <label>Outclause Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PAM_Credit__c</fullName>
        <formula>Partner_Account__r.Partner_Lead__r.FirstName &amp; &quot; &quot; &amp; Partner_Account__r.Partner_Lead__r.LastName</formula>
        <inlineHelpText>Partner Account Manager / Partner Lead</inlineHelpText>
        <label>PAM Credit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PA_Proposed_Date__c</fullName>
        <label>PA Proposed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PA_Proposed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PA Proposed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PNR__c</fullName>
        <formula>ACV__c  * 0.13</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ACV x 13%</inlineHelpText>
        <label>PNR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>POC_GUide_Sent__c</fullName>
        <formula>IF( 

POC_Guide_Sent_counter__c &gt;= 1, 

True, 

False 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>POC Guide Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>POC_Guide_Last_View_Date_Time__c</fullName>
        <label>POC Guide Last View Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>POC_Guide_Sent_counter__c</fullName>
        <label>POC Guide Sent (counter)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POC_Guide_Views__c</fullName>
        <label>POC Guide Views</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POC_Guide_Week_1_Sent__c</fullName>
        <formula>IF(

POC_Guide_Week_1_Sent_counter__c  &gt;= 1,

True,

False

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>POC Guide Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>POC_Guide_Week_1_Sent_counter__c</fullName>
        <inlineHelpText>used for rollup helper</inlineHelpText>
        <label>POC Guide Sent (counter)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_CPQ_Discount_Matrix_Required_c__c</fullName>
        <formula>IF(Account.PS_CPQ_Discount_Matrix_Required__c =TRUE,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates that  Account is obligated to have Discount Matrix-based pricing</inlineHelpText>
        <label>Discount Matrix Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_CPQ_Pricing_Group__c</fullName>
        <description>The Pricing Group for this Opportunity and all Quotes created for it. Drives the Price Book used for Quotes on this Opportunity.</description>
        <inlineHelpText>The Pricing Group for this Opportunity and all Quotes created for it. Drives the Price Book used for Quotes on this Opportunity.</inlineHelpText>
        <label>Pricing Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Pathfinder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PS_CPQ_Primary_Quote_Status__c</fullName>
        <description>Current Status of the Primary Quote on this Opportunity.</description>
        <formula>TEXT( SBQQ__PrimaryQuote__r.SBQQ__Status__c )</formula>
        <inlineHelpText>Current Status of the Primary Quote on this Opportunity.</inlineHelpText>
        <label>Primary Quote Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_Copado_Billing_Entity__c</fullName>
        <formula>TEXT(Account.PS_Copado_Billing_Entity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copado Billing Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_Uplift__c</fullName>
        <description>Uplift value is populated on Quote Line level for Subscription Products</description>
        <label>Uplift (%)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the partner that provided us the lead or helped us co-sell the opportunity.</inlineHelpText>
        <label>Lead Source Partner</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>This account is not a partner account.</errorMessage>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Opportunities</relationshipLabel>
        <relationshipName>PartnerOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Channel_Account__c</fullName>
        <formula>IF( Partner_Channel_is_Other__c  = false,Partner_Account__r.Name ,&apos;Other&apos;)</formula>
        <label>Partner Channel Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Channel_is_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Channel is &quot;Other&quot;</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Lead_Implementation_Partner__c</fullName>
        <formula>Implementation_Partner__r.Partner_Lead__r.FirstName  &amp; &apos; &apos;  &amp; Implementation_Partner__r.Partner_Lead__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Lead(Implementation Partner)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Lead_Partner_Account__c</fullName>
        <formula>Partner_Account__r.Partner_Lead__r.FirstName  &amp; &apos; &apos;  &amp; Partner_Account__r.Partner_Lead__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Lead(Partner Account)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Ultimate_Parent__c</fullName>
        <formula>Partner_Account__r.Ultimate_Parent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Ultimate Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <description>This Field is created as part of Qentinel data Migration</description>
        <label>Partner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pipeline_Channel__c</fullName>
        <formula>IF(RecordType.DeveloperName = &apos;Expansion&apos; || RecordType.DeveloperName = &apos;Renewal&apos;,&apos;Customer&apos;,IF(RecordType.DeveloperName &lt;&gt;  &apos;Renewal&apos; &amp;&amp; NOT(ISBLANK(Alliances_Owner__c)),&apos;Partner&apos;,IF(RecordType.DeveloperName  &lt;&gt;  &apos;Renewal&apos;  &amp;&amp; ISPICKVAL(LeadSource, &apos;AE Outbound&apos;),&apos;Sales&apos;,IF( NOT(ISPICKVAL(LeadSource, &apos;Copado&apos;)) &amp;&amp; NOT(ISPICKVAL(LeadSource, &apos;AE Outbound&apos;)) &amp;&amp; NOT(ISPICKVAL(LeadSource, &apos;CSM Outbound&apos;)) &amp;&amp; NOT(ISPICKVAL(LeadSource, &apos;Partner Outbound&apos;)),&apos;Marketing&apos;,&apos;&apos;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pipeline Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pipeline__c</fullName>
        <description>This field is created as part of Qentinal Data Migration</description>
        <label>Pipeline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PoC_Completion_Date__c</fullName>
        <inlineHelpText>Date by which the PoC will be completed</inlineHelpText>
        <label>PoC Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PoC_Feedback_Details__c</fullName>
        <label>PoC Feedback Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PoC_Feedback_Expected__c</fullName>
        <inlineHelpText>Date by which PoC feedback is expected</inlineHelpText>
        <label>PoC Feedback Expected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PoC_Feedback_Received__c</fullName>
        <label>PoC Feedback Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PoC_Plan__c</fullName>
        <inlineHelpText>Plan for proof of concept to validate Copado</inlineHelpText>
        <label>PoC Plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PoC_Start_Date__c</fullName>
        <label>PoC Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prepaid__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the opportunity is a multi-year deal paid upfront</inlineHelpText>
        <label>Prepaid</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>